driver-pod-template.yaml
apiVersion: v1
kind: Pod
spec:
  containers:
  - name: spark-kubernetes-driver
    volumeMounts:
    - name: spark-job-volume
      mountPath: /opt/spark/work-dir/job
  volumes:
  - name: spark-job-volume
    configMap:
      name: spark-job-cm
